--- a/src/views/homeView.ejs
+++ b/src/views/homeView.ejs
@@ -6,10 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>My Project</title>
+    <title>Meu projeto</title>
 </head>
 
 <body>
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="/all">Admin</a>
+          </div>
+        </div>
+      </nav>
+    
+      <br>
+
     <div class="container-fluid">
 
         <h1>Meu Projeto</h1>
