--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1,4 +1,5 @@
 h1 { 
-    background-color: hsl(0, 79%, 28%) !important;
-    color: #39117f;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    color:rgb(127, 83, 17) !important;
 }
