--- a/src/views/contactFormView.ejs
+++ b/src/views/contactFormView.ejs
@@ -9,5 +9,5 @@
             placeholder="Enter email">
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Enviar</button>
 </form>
