--- a/src/views/contactList.ejs
+++ b/src/views/contactList.ejs
@@ -10,6 +10,10 @@
     <title>View Results</title>
 </head>
 <body>
+  <div class="container-fluid">
+
+    <%-include('headerView.ejs');%>
+
     <table class="table table-striped">
         <thead>
           <tr>
@@ -25,10 +29,11 @@
                     <th scope="row"><%= i+1 %></th>
                     <td><%= contacts[i].name %></td>
                     <td><%= contacts[i].email %></td>
-                    <td><a href="/delete/"<%= contacts[i].email %>><i class="fa-solid fa-trash"></a></i></td>               
+                    <td><a href="/delete/<%= contacts[i].email %>" onclick="return confirm('Are you sure you want to delete this item?');"><i class="fa-solid fa-trash"></a></i></td>               
                   </tr>
               <% } %>
         </tbody>
       </table>
+      </div>
 </body>
 </html>
