--- a/src/views/homeView.ejs
+++ b/src/views/homeView.ejs
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" rel="stylesheet" href="/src/public/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="/src/public/css/styles.css">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -38,8 +38,8 @@
                 and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsu
             </p>
 
-            <div class="row" id="contactForm">
-                <h6>Fale conosco</h6>
+            <div id="contactForm">
+                <h5>Cadastre-se no nosso Newsletter</h5>
                 <p>
                     <%-include('contactFormView.ejs');%>
                 </p>
