--- a/src/views/contactFormView.ejs
+++ b/src/views/contactFormView.ejs
@@ -4,7 +4,7 @@
         <input type="text" class="form-control" id="name" name="name" placeholder="Name">
     </div>
     <div class="form-group">
-        <label for="email">Email address</label>
+        <label for="email">Email Address</label>
         <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email"
             placeholder="Enter email">
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
