--- a/src/views/contactList.ejs
+++ b/src/views/contactList.ejs
@@ -2,18 +2,20 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <link type="text/css" rel="stylesheet" href="/src/public/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     
-    <title>View Results</title>
+    <title>View Contacts</title>
 </head>
 <body>
   <div class="container-fluid">
 
     <%-include('headerView.ejs');%>
 
+    <h1>Contatos</h1>
     <table class="table table-striped">
         <thead>
           <tr>
@@ -29,7 +31,7 @@
                     <th scope="row"><%= i+1 %></th>
                     <td><%= contacts[i].name %></td>
                     <td><%= contacts[i].email %></td>
-                    <td><a href="/delete/<%= contacts[i].email %>" onclick="return confirm('Are you sure you want to delete this item?');"><i class="fa-solid fa-trash"></a></i></td>               
+                    <td><a href="/delete/<%= contacts[i].email %>" onclick="return confirm('Are you sure you want to delete this contact?');"><i class="fa-solid fa-trash"></a></i></td>               
                   </tr>
               <% } %>
         </tbody>
