--- a/src/views/homeView.ejs
+++ b/src/views/homeView.ejs
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <title>Meu projeto</title>
+    <title>My rest project</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
 
         <%-include('headerView.ejs');%>
 
-            <h1>Meu Projeto</h1>
+            <h1>My rest project</h1>
 
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -39,7 +39,7 @@
             </p>
 
             <div id="contactForm">
-                <h5>Cadastre-se no nosso Newsletter</h5>
+                <h5>Sign up for our Newsletter</h5>
                 <p>
                     <%-include('contactFormView.ejs');%>
                 </p>
