--- a/src/views/contactSave.ejs
+++ b/src/views/contactSave.ejs
@@ -1,3 +1,1 @@
-<div class="alert alert-primary" role="alert">
-    Your contact was submitted!
-</div>
+<div class="alert alert-primary" role="alert">Your contact was submitted!</div>
